--- a/鄂尔多斯项目/customTabBar-master/pages/tabbar/addressBook/index.wxss
+++ b/鄂尔多斯项目/customTabBar-master/pages/tabbar/addressBook/index.wxss
@@ -28,3 +28,42 @@
   width: 500rpx;
   height: 540rpx;
 }
+
+
+.tab{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 750rpx;
+  background: transparent;
+  padding: 15rpx 0;
+  z-index: 99;
+  color: #5B5E63;
+}
+.active{
+  color: #020C17;
+  font-size: 32rpx;
+}
+.cur{
+  width: 100%;
+  height: 3px;
+  background: var(--themeColor);
+  border-radius: 5px;
+  animation: name .5s ease;
+  margin-top: 10rpx;
+}
+@keyframes name{
+  0%{
+    transform: scale(0);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+
+.mt{
+  margin-top: 80rpx;
+  padding: 0 30rpx;
+}
