--- a/鄂尔多斯项目/customTabBar-master/pages/tabbar/my/index.wxml
+++ b/鄂尔多斯项目/customTabBar-master/pages/tabbar/my/index.wxml
@@ -4,7 +4,7 @@
     <block>
       <view class="left">
         <view class="userinfo-avatar" bindtap="tomyxinxi">
-          <image src="{{userinfo.avatarUrl}}"></image>
+          <image src="{{userinfo.avatar}}"></image>
         </view>
         <view class="user-li">
           <view class="userinfo-nickname">
