--- a/鄂尔多斯项目/customTabBar-master/pages/school/school.wxml
+++ b/鄂尔多斯项目/customTabBar-master/pages/school/school.wxml
@@ -9,7 +9,7 @@
       </view>
     </view>
     <view class="main">
-      <rich-text class="" nodes="{{list.content}}"></rich-text>
+      <rich-text class="textIndent" nodes="{{list.content}}"></rich-text>
     </view>
   </view>
 <!-- </scroll-view> -->
