--- a/鄂尔多斯项目/customTabBar-master/pages/tabbar/addressBook/index.wxml
+++ b/鄂尔多斯项目/customTabBar-master/pages/tabbar/addressBook/index.wxml
@@ -16,11 +16,11 @@
 <view class="box" wx:else>
   <!-- tab切换页 -->
   <view class="tab">
-    <view class="{{active == 2?'active':''}}" data-id="2" bindtap="tab">班級
-      <view class="cur" wx:if="{{active == 2}}"></view>
-    </view>
-    <view class="{{active == 3?'active':''}}" data-id="3" bindtap="tab">部门
+    <view class="{{active == 3?'active':''}}" data-id="3" bindtap="tab">单位职务
       <view class="cur" wx:if="{{active == 3}}"></view>
+    </view>
+    <view class="{{active == 2?'active':''}}" data-id="2" bindtap="tab">班级
+      <view class="cur" wx:if="{{active == 2}}"></view>
     </view>
   </view>
   <!-- 内容页 -->
@@ -30,10 +30,15 @@
     </view>
     <block wx:else>
       <view style='padding-bottom:{{isIphoneX?166:120}}rpx;'>
-        <view class="box1" bindtap="toTonxunDetail" wx:for="{{list}}" wx:key="pid" data-id="{{item.pid}}">
-          <view class="title">{{item.name}}</view>
-          <view class="num">{{item.count}}人</view>
-        </view>
+        <block wx:if="{{active == 2}}">
+          <view class="box1" bindtap="toTonxunDetail" wx:for="{{list}}" wx:key="pid" data-id="{{item.pid}}">
+            <view class="title">{{item.name}}</view>
+            <view class="num">{{item.count}}人</view>
+          </view>
+        </block>
+        <block wx:if="{{active == 3}}">
+          <BmsDirectory userList="{{list}}" bindgetcall="onPhone" titlestyle="titlestyle" msgstyle="msgstyle"></BmsDirectory>
+        </block>
       </view>
     </block>
   </view>
