--- a/鄂尔多斯项目/customTabBar-master/pages/tabbar/addressBook/index.wxss
+++ b/鄂尔多斯项目/customTabBar-master/pages/tabbar/addressBook/index.wxss
@@ -65,5 +65,14 @@
 
 .mt{
   margin-top: 80rpx;
-  padding: 0 30rpx;
+  /* padding: 0 30rpx; */
+  padding-bottom: 30rpx;
+}
+
+
+.titlestyle{
+  background: none !important;
+}
+.msgstyle{
+  background: none !important;
 }
