--- a/鄂尔多斯项目/customTabBar-master/pages/tongxunDetail/tongxunDetail.wxml
+++ b/鄂尔多斯项目/customTabBar-master/pages/tongxunDetail/tongxunDetail.wxml
@@ -1,4 +1,6 @@
 <!--pages/tongxunDetail/tongxunDetail.wxml-->
 <view class="box">
-  <BmsDirectory userList="{{list}}" bindgetcall="onPhone" titlestyle="titlestyle" msgstyle="msgstyle"></BmsDirectory>
+  <view style="padding-bottom: 30rpx;">
+    <BmsDirectory userList="{{list}}" bindgetcall="onPhone" titlestyle="titlestyle" msgstyle="msgstyle"></BmsDirectory>
+  </view>
 </view>
