--- a/鄂尔多斯项目/customTabBar-master/pages/teaching/teaching.wxss
+++ b/鄂尔多斯项目/customTabBar-master/pages/teaching/teaching.wxss
@@ -9,10 +9,12 @@
 }
 
 .leader-img {
-  width: 100rpx;
-  height: 100rpx;
+  /* width: 200rpx;
+  height: 200rpx; */
   overflow: hidden;
   margin-right: 10px;
+  border: none;
+  flex: 1;
 }
 
 .leader-img image {
@@ -21,7 +23,8 @@
 }
 
 .leader-content {
-  width: 81%;
+  /* width: 81%; */
+  flex: 2;
 }
 
 .leader-content .leader-title {
@@ -36,4 +39,71 @@
   margin-top: 10rpx;
   font-size: 30rpx;
   color: #a7a7a7;
+}
+
+.textIndent {
+  text-indent: 0;
+  color: #a7a7a7;
+  font-size: 30rpx;
+  margin-top: 10px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+}
+
+.mt {
+  margin-top: 80rpx;
+  /* padding: 0 30rpx; */
+  padding-bottom: 30rpx;
+}
+
+.none {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.none image {
+  width: 500rpx;
+  height: 540rpx;
+}
+
+
+.tab {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 750rpx;
+  background: white;
+  padding: 15rpx 0;
+  z-index: 99;
+  color: #5B5E63;
+}
+
+.active {
+  color: #020C17;
+  font-size: 32rpx;
+}
+
+.cur {
+  width: 100%;
+  height: 3px;
+  background: var(--themeColor);
+  border-radius: 5px;
+  animation: name .5s ease;
+  margin-top: 10rpx;
+}
+
+@keyframes name {
+  0% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
