--- a/鄂尔多斯项目/customTabBar-master/pages/school/school.wxml
+++ b/鄂尔多斯项目/customTabBar-master/pages/school/school.wxml
@@ -1,15 +1,17 @@
 <!--pages/school/school.wxml-->
 <!-- <scroll-view scroll-y="true"> -->
-  <view class="box">
-    <view class="top">
-      <view class="title">{{list.title}}</view>
-      <view class="foot">
-        <view class="tit">{{list.remark}}</view>
-        <view class="date">{{list.createTime}}</view>
-      </view>
-    </view>
-    <view class="main">
-      <rich-text class="textIndent" nodes="{{list.content}}"></rich-text>
+<view class="box">
+  <view class="top">
+    <view class="title">{{list.title}}</view>
+    <view class="foot">
+      <view class="tit">{{list.remark}}</view>
+      <view class="date">{{list.createTime}}</view>
     </view>
   </view>
+  <view class="main">
+    <video id="myVideo" src="https://stu.yikang.co/profile/upload/appraise/2021/12/10/1.mp4" enable-danmu controls object-fit="fill" title="铸牢中华民族共同体意识干部教育中心" bindpause="bindpause" bindended="bindended" style="width: 100%; height: 460rpx; margin-bottom: 20rpx;" custom-cache="{{false}}" show-casting-button="{{true}}">
+    </video>
+    <rich-text class="textIndent" nodes="{{list.content}}"></rich-text>
+  </view>
+</view>
 <!-- </scroll-view> -->
